--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "eslint-format": "eslint --fix --format node_modules/eslint-friendly-formatter/index.js"
   },
   "keywords": [
-    "vite"
+    "vite",
+    "vue3",
+    "electron"
   ],
   "main": "./dist-electron/main.js",
   "author": "yuanchenglang",
@@ -20,20 +22,22 @@
     "@vitejs/plugin-vue": "^3.1.2",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
     "@vue/compiler-sfc": "^3.2.38",
+    "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
     "electron": "^20.1.2",
     "electron-builder": "^23.3.3",
-    "electron-debug": "^3.2.0",
     "esbuild": "^0.15.12",
-    "eslint": "^8.24.0",
+    "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.4.0",
     "husky": "^4.2.3",
     "lint-staged": "^10.4.2",
+    "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "sass": "^1.55.0",
+    "tailwindcss": "^3.2.1",
     "terser": "^5.15.1",
     "typescript": "^4.8.4",
     "vite": "^3.1.8",
@@ -42,6 +46,8 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "electron-debug": "^3.2.0",
+    "electron-debugger": "^2.1.2",
     "element-plus": "^2.2.19",
     "pina": "^0.20.2204228",
     "ramda": "^0.28.0",
@@ -54,7 +60,7 @@
   },
   "lint-staged": {
     "src/**/*.{vue,js,jsx,ts,tsx}": [
-      "eslint-format"
+      "npm run eslint-format"
     ]
   },
   "packageManager": "yarn"
