--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,16 @@
 {
   // ...
   "compilerOptions": {
+    "jsx": "preserve",
     "incremental": true, // TS编译器在第一次编译之后会生成一个存储编译信息的文件，第二次编译会在第一次的基础上进行增量编译，可以提高编译的速度
 //    "tsBuildInfoFile": "./buildFile", // 增量编译文件的存储位置
     "diagnostics": true, // 打印诊断信息
-    "target": "ES5", // 目标语言的版本
+    "target": "esnext", // 目标语言的版本
 //    "module": "CommonJS", // 生成代码的模板标准
 //    "outFile": "./app.js", // 将多个相互依赖的文件生成一个文件，可以用在AMD模块中，即开启时应设置"module": "AMD",
-    "lib": ["DOM", "ES2015", "ScriptHost", "ES2019.Array"], // TS需要引用的库，即声明文件，es5 默认引用dom、es5、scripthost,如需要使用es的高级版本特性，通常都需要配置，如es8的数组新特性需要引入"ES2019.Array",
+    "lib": ["DOM", "ES2015", "ES2019.Array", "esnext"], // TS需要引用的库，即声明文件，es5 默认引用dom、es5、scripthost,如需要使用es的高级版本特性，通常都需要配置，如es8的数组新特性需要引入"ES2019.Array",
+    "resolveJsonModule": true,
+    "isolatedModules": false,
     "allowJS": true, // 允许编译器编译JS，JSX文件
     "checkJs": true, // 允许在JS文件中报错，通常与allowJS一起使用
 //    "outDir": "./dist", // 指定输出目录
@@ -20,7 +23,7 @@
 //    "declarationMap": true, // 为声明文件生成sourceMap
 //    "typeRoots": [], // 声明文件目录，默认时node_modules/@types
 //    "types": [], // 加载的声明文件包
-//    "removeComments":true, // 删除注释
+    "removeComments":true, // 删除注释
 //    "noEmit": true, // 不输出文件,即编译后不会生成任何js文件
 //    "noEmitOnError": true, // 发送错误时不输出任何文件
 //    "noEmitHelpers": true, // 不生成helper函数，减小体积，需要额外安装，常配合importHelpers一起使用
@@ -43,8 +46,8 @@
 //    "moduleResolution": "node", // 模块解析策略，ts默认用node的解析策略，即相对的方式导入
     "baseUrl": "./", // 解析非相对模块的基地址，默认是当前目录
     "paths": {
-      "@src": ["src/"]
-    },
+      "@src": ["/src/"]
+    }
 //    "rootDirs": ["src","out"], // 将多个目录放在一个虚拟目录下，用于运行时，即编译后引入文件的位置可能发生变化，这也设置可以虚拟src和out在同一个目录下，不用再去改变路径也不会报错
 //    "listEmittedFiles": true, // 打印输出文件
 //    "listFiles": true // 打印编译的文件(包括引用的声明文件)
