--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,5 +52,5 @@
 //    "listEmittedFiles": true, // 打印输出文件
 //    "listFiles": true // 打印编译的文件(包括引用的声明文件)
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "electron"]
 }
