feat:配置主綫程渲染綫程通信

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -11,7 +11,7 @@ files:
     - "dist-electron"
     - "dist-app"
     - "extensions"
-    - "utils"
+    - "src/preload.js"
 mac:
     artifactName: "${productName}_${version}.${ext}"
     target:
