--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "axios": "^1.1.3",
     "electron-debug": "^3.2.0",
     "electron-debugger": "^2.1.2",
-    "element-plus": "^2.2.19",
     "pina": "^0.20.2204228",
     "ramda": "^0.28.0",
-    "vue": "^3.2.41"
+    "vue": "^3.2.41",
+    "vuetify": "3.0.5"
   },
   "husky": {
     "hooks": {
@@ -63,5 +63,5 @@
       "npm run eslint-format"
     ]
   },
-  "packageManager": "yarn"
+  "packageManager": "yarn@1.22.4"
 }
