--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -22,6 +22,7 @@ win:
           arch:
             - "x64"
     artifactName: "${productName}_${version}.${ext}"
+    icon: "xxx/icon.ico"
 nsis:
     oneClick: false
     perMachine: false
