--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "custom-electron-titlebar": "^4.1.5",
     "electron-debug": "^3.2.0",
     "electron-debugger": "^2.1.2",
     "pina": "^0.20.2204228",
