--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     ]
   },
   "engines": {
-    "node": "^14.18.0 || >=16.0.0"
+    "node": "^16.10.0"
   },
   "packageManager": "yarn@1.22.4"
 }
